# automatic-auction

./: Anchor.toml
programs/automatic-auction/: Cargo.toml
programs/automatic-auction/src/: lib.rs
tests/: automatic-auction.ts
