[package]
name = "automatic-auction"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "automatic_auction"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = []
default = []

[dependencies]
anchor-lang = "0.29.0"
clockwork-sdk = "2.0.19"

